--- a/css/slit-custom.css
+++ b/css/slit-custom.css
@@ -158,7 +158,7 @@
 
 
 .seo_version .bg-img-1 {
-	background-image: url(../images/slider-01.jpg);
+	background-image: url(../images/pembina-karisma.jpeg);
 }
 .seo_version .bg-img-2 {
 	background-image: url(../images/slider-02.jpg);
